Overflow fix on mobile

--- a/styles.css
+++ b/styles.css
@@ -447,16 +447,20 @@
      width: 100%;
      z-index: 0;
 }
-@media only screen and (max-width: 600px) {
-  p {
-    padding-left: 0;
-  }
-}
  p:before {
      content: ">";
      position: absolute;
      left: 0;
      top: 0;
+}
+@media only screen and (max-width: 600px) {
+  p {
+    padding-left: 0;
+	overflow: revert;
+  }
+   p:before {
+     left: -1em;
+  }
 }
  a {
      color: var(--link);
